--- a/basic-android-kotlin-compose-training-tip-calculator-starter/app/src/main/res/values/strings.xml
+++ b/basic-android-kotlin-compose-training-tip-calculator-starter/app/src/main/res/values/strings.xml
@@ -18,5 +18,8 @@
     <string name="app_name">Tip Time</string>
     <string name="calculate_tip">Calculate Tip</string>
     <string name="bill_amount">Bill Amount</string>
+<!--
+Birden fazla composable'da buna eriştiğimiz için burada yazdık.
+-->
     <string name="tip_amount">Tip Amount: %s</string>
 </resources>
