tip-percentage text field added.

--- a/basic-android-kotlin-compose-training-tip-calculator-starter/app/src/main/res/values/strings.xml
+++ b/basic-android-kotlin-compose-training-tip-calculator-starter/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
 Birden fazla composable'da buna eriştiğimiz için burada yazdık.
 -->
     <string name="tip_amount">Tip Amount: %s</string>
+    <string name="how_was_the_service">Tip Percentage</string>
+    <string name="round_up_tip">Round up tip?</string>
 </resources>
